syntax = "proto3";

package auth;

option go_package = "./gen";

// Define the User message that represents a registered user.
message User {
    int64 id = 1;
    string phone_number = 2;
    int32 otp = 3;
}

// Request message for user registration.
message RegisterUserRequest {
    string phone_number = 1;
}

// Response message for user registration.
message RegisterUserResponse {
    User user = 1;
    string jwt_token = 2;
    string message = 3;
}

// Request message to verify an OTP for a user.
message VerifyOTPRequest {
    int64 user_id = 1;
    string phone_number = 2;
    int32 otp = 3;
}

// Response message for OTP verification and JWT token generation.
message VerifyOTPResponse {
    bool valid = 1;
    string jwt_token = 2;
    string message = 3;
}

// Define the UserService service.
service UserService {
    // Register a new user with a phone number and return JWT token and success message.
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);

    // Verify an OTP and return a JWT token and success message if valid.
    rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse);
}
